feat: implement patient profile management APIs, UI sidebar, and health metric service functionality